--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,240 @@
+/*Module2 Assignment CSS stylesheet specification*/
+/* a three section in on row containing a section head placed at top right corner of each section*/
 
+<style>
+
+/**************** Basic styles****************/
+*{
+ box-sizling: border-box; 
+
+}
+ 
+
+ .header {
+  text-align: center;
+  font-size: 40px;
+  font-family: Helvetica, sans-serif;
+  font-style: bold;
+  color: rgb(65, 14, 204);
+  position: relative;
+  bottom: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 49px;
+ 
+
+}
+
+p { 
+    float: left;
+    border: 1px solid black;
+    padding:18px;
+    width:90%;
+    height: 200px;
+    font-family: Helvetica;
+    background-color: rgb(244, 245, 241);
+    font-size: 18px;
+    text-align: left;
+    color: rgba(0, 0, 0, 0.644);
+    margin-right:auto;
+    margin-left: auto;
+    
+
+    
+   
+  }
+
+
+
+  
+    
+    
+    
+    
+    
+    
+    
+   
+
+  
+
+
+  h3{
+    float: right;
+    text-align: center; 
+    border: 1px solid black; 
+    background-color:rgb(185, 214, 18); 
+    width: 100px; 
+    height: 20px; 
+    display: block;
+    position: relative;
+    bottom: -57px;
+    left: -9px;
+    
+  }
+
+
+  
+
+  
+
+  
+
+    .footer {
+      width: 100%;
+      height: 200px;
+      display: inline-block;
+      background-color: rgb(8, 4, 12);
+      text-align: left;
+      font-size: 20px;
+      position: relative;
+      top: 250px;
+    
+    }
+    
+
+  
+  
+
+  /* Framework to make the page responsive. */
+.row {
+    width: 100%;
+  }
+  
+  /********** This specification is for large devices only **********/
+@media (min-width: 1200px) {
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left;
+   
+   
+   
+  
+  }
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    width: 33.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 74.99%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
+}
+
+    /********** The is the specification for Medium devices **********/
+@media (min-width: 769px) and (max-width: 991px) {
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    float: left;
+   
+   
+  }
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 74.99%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
+}
+
+ /********** The is the specification for smaller devices **********/
+@media (min-width: 765px) and (max-width: 990px) {
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    float: left;
+  
+  
+  }
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 74.99%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
+}
+</style>
